--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.java.binaries=src
-sonar.tests=src/report_test/*
+sonar.tests=src/report_test/
 sonar.projectKey=Dunned_RefactorChessMaster
 sonar.organization=dunned
