--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.java.binaries=src
-sonar.tests=src/report_test/Test Results - test_in_RefactorChessMaster.xml
+sonar.java.binaries=Original.src
+sonar.tests=Original.src/report_test/report.xml
 sonar.projectKey=Dunned_RefactorChessMaster
 sonar.organization=dunned
