--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.java.binaries=Original.src
-sonar.tests=Original.src/report_test/report.xml
+sonar.sources=Original.src
+sonar.testExecutionReportPaths=Original.src/report_test/report.xml
 sonar.projectKey=Dunned_RefactorChessMaster
 sonar.organization=dunned
