--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.java.binaries=Original.src
 sonar.sources=Original.src
-#sonar.test=Original.src/report_test/report.xml
+sonar.test=Original.src/report_test/report.xml
 sonar.projectKey=Dunned_RefactorChessMaster
 sonar.organization=dunned
